syntax = "proto3";

package hotel.v1;

option go_package = "api/hotel/v1;hotelv1";

import "hotel/v1/rpc/create_hotel.proto";
import "hotel/v1/rpc/get_hotels.proto";
import "hotel/v1/rpc/get_hotel.proto";
import "hotel/v1/rpc/delete_hotel.proto";

service HotelService {
  rpc CreateHotel(CreateHotelRequest) returns (CreateHotelResponse);
  rpc GetHotels(GetHotelsRequest) returns (GetHotelsRequest);
  rpc GetHotel(GetHotelRequest) returns (GetHotelResponse);
  rpc DeleteHotel(DeleteHotelRequest) returns (DeleteHotelResponse);
}
