syntax = "proto3";

package hotel.v1;

option go_package = "api/hotel/v1;hotelv1";

import "buf/validate/validate.proto";

message DeleteHotelRequest {
  string id = 1 [
    (buf.validate.field).string.uuid = true
  ];
}

message DeleteHotelResponse {
  string message = 1;
}