syntax = "proto3";

package hotel.v1;

option go_package = "api/hotel/v1;hotelv1";

import "buf/validate/validate.proto";
import "hotel/v1/models/hotel.proto";

message GetHotelRequest {
  string id = 1 [
    (buf.validate.field).string.uuid = true
  ];
}

message GetHotelResponse {
  Hotel hotel = 1;
}